[gd_scene load_steps=11 format=2]

[ext_resource path="res://Tilesets/BaseRoomTileset.tres" type="TileSet" id=1]
[ext_resource path="res://CutsceneTriggers/CutsceneTriggger.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/SceneTranistion/SceneTransition.tscn" type="PackedScene" id=3]
[ext_resource path="res://Entities/EntranceBlock/EntranceBlock.tscn" type="PackedScene" id=4]
[ext_resource path="res://Interface/Dialog/DialogContainer.tscn" type="PackedScene" id=5]
[ext_resource path="res://Rooms/MainRoom/MainRoom.gd" type="Script" id=6]
[ext_resource path="res://Characters/Saoirse/Saoirse.tscn" type="PackedScene" id=7]
[ext_resource path="res://CutsceneTriggers/CutsceneManager.gd" type="Script" id=8]

[sub_resource type="Animation" id=1]
resource_name = "intro"
length = 22.0
tracks/0/type = "value"
tracks/0/path = NodePath("Saoirse/Light2D:enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Saoirse/Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 3, 4, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.2, 0.4, 0.6, 0.8, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Saoirse/Camera2D:zoom")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2, 3, 19.9, 21, 22 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 0.9 ), Vector2( 0.8, 0.8 ), Vector2( 0.8, 0.8 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasModulate:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.001, 0.002, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.117188, 0.117188, 0.117188, 1 ), Color( 0.117188, 0.117188, 0.117188, 1 ), Color( 0, 0, 0, 1 ), Color( 0.117647, 0.117647, 0.117647, 1 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("Saoirse")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_acting"
} ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("Saoirse")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 6, 10, 16, 19 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [ Vector2( 170, 1110 ) ],
"method": "move_to_point"
}, {
"args": [ Vector2( 796, 1199 ) ],
"method": "move_to_point"
}, {
"args": [ Vector2( 553, 1108 ) ],
"method": "move_to_point"
}, {
"args": [ Vector2( 560, 775 ) ],
"method": "move_to_point"
} ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 10 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "saoirse", "intro_0" ],
"method": "init_dialoge"
} ]
}

[sub_resource type="Animation" id=2]
length = 4.0
tracks/0/type = "method"
tracks/0/path = NodePath("Saoirse")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "start_acting"
}, {
"args": [ Vector2( 481, 441 ) ],
"method": "move_to_point"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "saoirse", "the_head_0" ],
"method": "init_dialoge"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Saoirse/AnimatedSprite:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle_walk_back" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Saoirse/Camera2D:zoom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 1.5, 3, 3.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 0.9 ), Vector2( 0.8, 0.8 ), Vector2( 0.8, 0.8 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}

[node name="MainRoom" type="Node2D"]
position = Vector2( 0, 2 )
script = ExtResource( 6 )
room_tilemap = NodePath("Walls")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DialogContainer" parent="CanvasLayer" instance=ExtResource( 5 )]

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
position = Vector2( 21.3813, 12.4726 )
color = Color( 0.117188, 0.117188, 0.117188, 1 )

[node name="Floors" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( 7, 14, 0, 65543, 11, 2, 131073, 11, 2, 131074, 11, 2, 131075, 11, 2, 131076, 11, 2, 131077, 11, 2, 131078, 11, 2, 131079, 11, 2, 131080, 11, 2, 131081, 11, 2, 131082, 11, 2, 131083, 11, 2, 131084, 11, 2, 131085, 11, 2, 131086, 11, 2, 196609, 11, 2, 196610, 11, 2, 196611, 11, 2, 196612, 11, 2, 196613, 11, 2, 196614, 11, 2, 196615, 11, 2, 196616, 11, 2, 196617, 11, 2, 196618, 11, 2, 196619, 11, 2, 196620, 11, 2, 196621, 11, 2, 196622, 11, 2, 262144, 11, 2, 262145, 11, 2, 262146, 11, 2, 262147, 11, 2, 262148, 11, 2, 262149, 11, 2, 262150, 11, 2, 262151, 11, 2, 262152, 11, 2, 262153, 11, 2, 262154, 11, 2, 262155, 11, 2, 262156, 11, 2, 262157, 11, 2, 262158, 11, 2, 327681, 11, 2, 327682, 11, 2, 327683, 11, 2, 327684, 11, 2, 327685, 11, 2, 327686, 11, 2, 327687, 11, 2, 327688, 11, 2, 327689, 11, 2, 327690, 11, 2, 327691, 11, 2, 327692, 11, 2, 327693, 11, 2, 327694, 11, 2, 393217, 11, 2, 393218, 11, 2, 393219, 11, 2, 393220, 11, 2, 393221, 11, 2, 393222, 11, 2, 393223, 11, 2, 393224, 11, 2, 393225, 11, 2, 393226, 11, 2, 393227, 11, 2, 393228, 11, 2, 393229, 11, 2, 393230, 11, 2, 458753, 11, 2, 458754, 11, 2, 458755, 11, 2, 458756, 11, 2, 458757, 11, 2, 458758, 11, 2, 458759, 11, 2, 458760, 11, 2, 458761, 11, 2, 458762, 11, 2, 458763, 11, 2, 458764, 11, 2, 458765, 11, 2, 458766, 11, 2, 524289, 11, 2, 524290, 11, 2, 524291, 11, 2, 524292, 11, 2, 524293, 11, 2, 524294, 11, 2, 524295, 11, 2, 524296, 11, 2, 524297, 11, 2, 524298, 11, 2, 524299, 11, 2, 524300, 11, 2, 524301, 11, 2, 524302, 11, 2, 589825, 11, 2, 589826, 11, 2, 589827, 11, 2, 589828, 11, 2, 589829, 11, 2, 589830, 11, 2, 589831, 11, 2, 589832, 11, 2, 589833, 11, 2, 589834, 11, 2, 589835, 11, 2, 589836, 11, 2, 589837, 11, 2, 589838, 11, 2, 655361, 11, 2, 655362, 11, 2, 655363, 11, 2, 655364, 11, 2, 655365, 11, 2, 655366, 11, 2, 655367, 11, 2, 655368, 11, 2, 655369, 11, 2, 655370, 11, 2, 655371, 11, 2, 655372, 11, 2, 655373, 11, 2, 655374, 11, 2, 720897, 11, 2, 720898, 11, 2, 720899, 11, 2, 720900, 11, 2, 720901, 11, 2, 720902, 11, 2, 720903, 11, 2, 720904, 11, 2, 720905, 11, 2, 720906, 11, 2, 720907, 11, 2, 720908, 11, 2, 720909, 11, 2, 720910, 11, 2, 786440, 11, 2, 786441, 11, 2, 851976, 11, 2, 851977, 11, 2, 917512, 11, 2, 917513, 11, 2, 983041, 11, 2, 983042, 11, 2, 983043, 11, 2, 983044, 11, 2, 983045, 11, 2, 983046, 11, 2, 983047, 11, 2, 983048, 11, 2, 983049, 11, 2, 983050, 11, 2, 983051, 11, 2, 983052, 11, 2, 983053, 11, 2, 983054, 11, 2, 1048577, 11, 2, 1048578, 11, 2, 1048579, 11, 2, 1048580, 11, 2, 1048581, 11, 2, 1048582, 11, 2, 1048583, 11, 2, 1048584, 11, 2, 1048585, 11, 2, 1048586, 11, 2, 1048587, 11, 2, 1048588, 11, 2, 1048589, 11, 2, 1048590, 11, 2, 1114113, 11, 2, 1114114, 11, 2, 1114115, 11, 2, 1114116, 11, 2, 1114117, 11, 2, 1114118, 11, 2, 1114119, 11, 2, 1114120, 11, 2, 1114121, 11, 2, 1114122, 11, 2, 1114123, 11, 2, 1114124, 11, 2, 1114125, 11, 2, 1114126, 11, 2, 1114127, 11, 2, 1179649, 11, 2, 1179650, 11, 2, 1179651, 11, 2, 1179652, 11, 2, 1179653, 11, 2, 1179654, 11, 2, 1179655, 11, 2, 1179656, 11, 2, 1179657, 11, 2, 1179658, 11, 2, 1179659, 11, 2, 1179660, 11, 2, 1179661, 11, 2, 1179662, 11, 2, 1179663, 11, 2, 1245185, 11, 2, 1245186, 11, 2, 1245187, 11, 2, 1245188, 11, 2, 1245189, 11, 2, 1245190, 11, 2, 1245191, 11, 2, 1245192, 11, 2, 1245193, 11, 2, 1245194, 11, 2, 1245195, 11, 2, 1245196, 11, 2, 1245197, 11, 2, 1245198, 11, 2, 1310728, 11, 2, 1310729, 11, 2 )

[node name="Walls" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( -327674, 15, 0, -327673, 15, 0, -196612, 15, 0, -196611, 15, 0, -196610, 15, 0, -196609, 15, 0, -262144, 15, 0, -262143, 15, 0, -262142, 15, 0, -262141, 15, 0, -262140, 15, 0, -262139, 15, 0, -262138, 15, 0, -262137, 15, 0, -262136, 15, 0, -262135, 15, 0, -262134, 15, 0, -262133, 15, 0, -262132, 15, 0, -262131, 15, 0, -262130, 15, 0, -262129, 15, 0, -262128, 15, 0, -262127, 15, 0, -262126, 15, 0, -262125, 15, 0, -131076, 15, 0, -131075, 15, 0, -131074, 15, 0, -131073, 15, 0, -196608, 15, 0, -196607, 15, 0, -196606, 15, 0, -196605, 15, 0, -196604, 15, 0, -196603, 15, 0, -196602, 15, 0, -196601, 15, 0, -196600, 15, 0, -196599, 15, 0, -196598, 15, 0, -196597, 15, 0, -196596, 15, 0, -196595, 15, 0, -196594, 15, 0, -196593, 15, 0, -196592, 15, 0, -196591, 15, 0, -196590, 15, 0, -196589, 15, 0, -65541, 15, 0, -65540, 15, 0, -65539, 15, 0, -65538, 15, 0, -65537, 15, 0, -131072, 15, 0, -131071, 15, 0, -131070, 15, 0, -131069, 15, 0, -131068, 15, 0, -131067, 15, 0, -131066, 15, 0, -131065, 15, 0, -131064, 15, 0, -131063, 15, 0, -131062, 15, 0, -131061, 15, 0, -131060, 15, 0, -131059, 15, 0, -131058, 15, 0, -131057, 15, 0, -131056, 15, 0, -131055, 15, 0, -131054, 15, 0, -131053, 15, 0, -4, 15, 0, -3, 15, 0, -2, 15, 0, -1, 15, 0, -65536, 15, 0, -65535, 15, 0, -65534, 15, 0, -65533, 15, 0, -65532, 15, 0, -65531, 15, 0, -65530, 15, 0, -65529, 15, 0, -65528, 15, 0, -65527, 15, 0, -65526, 15, 0, -65525, 15, 0, -65524, 15, 0, -65523, 15, 0, -65522, 15, 0, -65521, 15, 0, -65520, 15, 0, -65519, 15, 0, -65518, 15, 0, -65517, 15, 0, 65532, 15, 0, 65533, 15, 0, 65534, 15, 0, 65535, 15, 0, 0, 12, 0, 1, 12, 1, 2, 12, 1, 3, 12, 1, 4, 12, 1, 5, 12, 1, 6, 12, 1, 8, 12, 1, 9, 12, 1, 10, 12, 1, 11, 12, 1, 12, 12, 1, 13, 12, 1, 14, 12, 1, 15, 12, 2, 16, 15, 0, 17, 15, 0, 18, 15, 0, 19, 15, 0, 131068, 15, 0, 131069, 15, 0, 131070, 15, 0, 131071, 15, 0, 65536, 12, 65536, 65537, 6, 0, 65538, 6, 0, 65539, 6, 0, 65540, 6, 0, 65541, 6, 0, 65542, 6, 0, 65544, 6, 0, 65545, 6, 0, 65546, 6, 0, 65547, 6, 0, 65548, 6, 0, 65549, 6, 0, 65550, 6, 0, 65551, 12, 65538, 65552, 15, 0, 65553, 15, 0, 65554, 15, 0, 65555, 15, 0, 196604, 15, 0, 196605, 15, 0, 196606, 15, 0, 196607, 15, 0, 131072, 12, 65536, 131073, 8, 0, 131074, 8, 0, 131075, 8, 0, 131076, 8, 0, 131077, 8, 0, 131078, 8, 0, 131080, 8, 0, 131081, 8, 0, 131082, 8, 0, 131083, 8, 0, 131084, 8, 0, 131085, 8, 0, 131086, 8, 0, 131087, 12, 65538, 131088, 15, 0, 131089, 15, 0, 131090, 15, 0, 131091, 15, 0, 262140, 15, 0, 262141, 15, 0, 262142, 15, 0, 262143, 15, 0, 196608, 12, 65536, 196623, 12, 65538, 196624, 15, 0, 196625, 15, 0, 196626, 15, 0, 196627, 15, 0, 327676, 15, 0, 327677, 15, 0, 327678, 15, 0, 327679, 15, 0, 262159, 12, 65538, 262160, 15, 0, 262161, 15, 0, 262162, 15, 0, 262163, 15, 0, 393212, 15, 0, 393213, 15, 0, 393214, 15, 0, 393215, 15, 0, 327680, 12, 65536, 327695, 12, 65538, 327696, 15, 0, 327697, 15, 0, 327698, 15, 0, 327699, 15, 0, 458748, 15, 0, 458749, 15, 0, 458750, 15, 0, 458751, 15, 0, 393216, 12, 65536, 393231, 12, 65538, 393232, 15, 0, 393233, 15, 0, 393234, 15, 0, 393235, 15, 0, 524284, 15, 0, 524285, 15, 0, 524286, 15, 0, 524287, 15, 0, 458752, 12, 65536, 458767, 12, 65538, 458768, 15, 0, 458769, 15, 0, 458770, 15, 0, 458771, 15, 0, 589820, 15, 0, 589821, 15, 0, 589822, 15, 0, 589823, 15, 0, 524288, 12, 65536, 524303, 12, 65538, 524304, 15, 0, 524305, 15, 0, 524306, 15, 0, 524307, 15, 0, 655356, 15, 0, 655357, 15, 0, 655358, 15, 0, 655359, 15, 0, 589824, 12, 65536, 589839, 12, 65538, 589840, 15, 0, 589841, 15, 0, 589842, 15, 0, 589843, 15, 0, 720892, 15, 0, 720893, 15, 0, 720894, 15, 0, 720895, 15, 0, 655360, 12, 65536, 655375, 12, 65538, 655376, 15, 0, 655377, 15, 0, 655378, 15, 0, 655379, 15, 0, 786428, 15, 0, 786429, 15, 0, 786430, 15, 0, 786431, 15, 0, 720896, 12, 65536, 720911, 12, 65538, 720912, 15, 0, 720913, 15, 0, 720914, 15, 0, 720915, 15, 0, 851964, 15, 0, 851965, 15, 0, 851966, 15, 0, 851967, 15, 0, 786432, 13, 0, 786433, 12, 1, 786434, 12, 1, 786435, 12, 1, 786436, 12, 1, 786437, 12, 1, 786438, 12, 1, 786439, 12, 1, 786442, 12, 1, 786443, 12, 1, 786444, 12, 1, 786445, 12, 1, 786446, 12, 1, 786447, 13, 1, 786448, 15, 0, 786449, 15, 0, 786450, 15, 0, 786451, 15, 0, 917500, 15, 0, 917501, 15, 0, 917502, 15, 0, 917503, 15, 0, 851968, 12, 65536, 851969, 6, 0, 851970, 6, 0, 851971, 6, 0, 851972, 6, 0, 851973, 6, 0, 851974, 6, 0, 851975, 6, 0, 851978, 6, 0, 851979, 6, 0, 851980, 6, 0, 851981, 6, 0, 851982, 6, 0, 851983, 12, 65538, 851984, 15, 0, 851985, 15, 0, 851986, 15, 0, 851987, 15, 0, 983036, 15, 0, 983037, 15, 0, 983038, 15, 0, 983039, 15, 0, 917504, 12, 65536, 917505, 19, 0, 917506, 19, 0, 917507, 19, 0, 917508, 19, 0, 917509, 19, 0, 917510, 19, 0, 917511, 19, 0, 917514, 19, 0, 917515, 19, 0, 917516, 19, 0, 917517, 19, 0, 917518, 19, 0, 917519, 12, 65538, 917520, 15, 0, 917521, 15, 0, 917522, 15, 0, 917523, 15, 0, 1048572, 15, 0, 1048573, 15, 0, 1048574, 15, 0, 1048575, 15, 0, 983040, 12, 65536, 983055, 12, 65538, 983056, 15, 0, 983057, 15, 0, 983058, 15, 0, 983059, 15, 0, 1114108, 15, 0, 1114109, 15, 0, 1114110, 15, 0, 1114111, 15, 0, 1048576, 12, 65536, 1048591, 12, 65538, 1048592, 15, 0, 1048593, 15, 0, 1048594, 15, 0, 1048595, 15, 0, 1179644, 15, 0, 1179645, 15, 0, 1179646, 15, 0, 1179647, 15, 0, 1114112, 12, 65536, 1114128, 15, 0, 1114129, 15, 0, 1114130, 15, 0, 1114131, 15, 0, 1245180, 15, 0, 1245181, 15, 0, 1245182, 15, 0, 1245183, 15, 0, 1179648, 12, 65536, 1179664, 15, 0, 1179665, 15, 0, 1179666, 15, 0, 1179667, 15, 0, 1310716, 15, 0, 1310717, 15, 0, 1310718, 15, 0, 1310719, 15, 0, 1245184, 12, 65536, 1245199, 12, 65538, 1245200, 15, 0, 1245201, 15, 0, 1245202, 15, 0, 1245203, 15, 0, 1376252, 15, 0, 1376253, 15, 0, 1376254, 15, 0, 1376255, 15, 0, 1310720, 12, 131072, 1310721, 12, 131073, 1310722, 12, 131073, 1310723, 12, 131073, 1310724, 12, 131073, 1310725, 12, 131073, 1310726, 12, 131073, 1310727, 12, 131073, 1310730, 12, 131073, 1310731, 12, 131073, 1310732, 12, 131073, 1310733, 12, 131073, 1310734, 12, 131073, 1310735, 12, 131074, 1310736, 15, 0, 1310737, 15, 0, 1310738, 15, 0, 1310739, 15, 0, 1441788, 15, 0, 1441789, 15, 0, 1441790, 15, 0, 1441791, 15, 0, 1376256, 15, 0, 1376257, 15, 0, 1376258, 15, 0, 1376259, 15, 0, 1376260, 15, 0, 1376261, 15, 0, 1376262, 15, 0, 1376263, 15, 0, 1376264, 15, 0, 1376265, 15, 0, 1376266, 15, 0, 1376267, 15, 0, 1376268, 15, 0, 1376269, 15, 0, 1376270, 15, 0, 1376271, 15, 0, 1376272, 15, 0, 1376273, 15, 0, 1376274, 15, 0, 1376275, 15, 0, 1507324, 15, 0, 1507325, 15, 0, 1507326, 15, 0, 1507327, 15, 0, 1441792, 15, 0, 1441793, 15, 0, 1441794, 15, 0, 1441795, 15, 0, 1441796, 15, 0, 1441797, 15, 0, 1441798, 15, 0, 1441799, 15, 0, 1441800, 15, 0, 1441801, 15, 0, 1441802, 15, 0, 1441803, 15, 0, 1441804, 15, 0, 1441805, 15, 0, 1441806, 15, 0, 1441807, 15, 0, 1441808, 15, 0, 1441809, 15, 0, 1441810, 15, 0, 1441811, 15, 0, 1572860, 15, 0, 1572861, 15, 0, 1572862, 15, 0, 1572863, 15, 0, 1507328, 15, 0, 1507329, 15, 0, 1507330, 15, 0, 1507331, 15, 0, 1507332, 15, 0, 1507333, 15, 0, 1507334, 15, 0, 1507335, 15, 0, 1507336, 15, 0, 1507337, 15, 0, 1507338, 15, 0, 1507339, 15, 0, 1507340, 15, 0, 1507341, 15, 0, 1507342, 15, 0, 1507343, 15, 0, 1507344, 15, 0, 1507345, 15, 0, 1507346, 15, 0, 1507347, 15, 0, 1638396, 15, 0, 1638397, 15, 0, 1638398, 15, 0, 1638399, 15, 0, 1572864, 15, 0, 1572865, 15, 0, 1572866, 15, 0, 1572867, 15, 0, 1572868, 15, 0, 1572869, 15, 0, 1572870, 15, 0, 1572871, 15, 0, 1572872, 15, 0, 1572873, 15, 0, 1572874, 15, 0, 1572875, 15, 0, 1572876, 15, 0, 1572877, 15, 0, 1572878, 15, 0, 1572879, 15, 0, 1572880, 15, 0, 1572881, 15, 0, 1572882, 15, 0, 1572883, 15, 0, 1638402, 15, 0, 1638403, 15, 0 )

[node name="Decorations" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( 65538, 0, 0, 65540, 5, 0, 65543, 14, 0, 65546, 5, 0, 65549, 0, 65536, 196613, 10, 65536, 196618, 10, 65536, 262144, 11, 0, 262146, 9, 65536, 262147, 9, 131074, 262148, 9, 2, 262150, 18, 0, 262151, 18, 1, 262152, 18, 2, 262155, 9, 65536, 262156, 9, 131074, 262157, 9, 2, 327682, 9, 65537, 327683, 9, 131072, 327684, 9, 65538, 327686, 18, 65536, 327687, 18, 65537, 327688, 18, 65538, 327691, 9, 65537, 327692, 9, 131072, 327693, 9, 65538, 393218, 9, 65537, 393219, 9, 131072, 393220, 9, 65538, 393222, 18, 131072, 393223, 18, 131073, 393224, 18, 131074, 393227, 9, 65537, 393228, 9, 196608, 393229, 9, 65538, 458754, 9, 65537, 458755, 9, 196608, 458756, 9, 65538, 458762, 11, 0, 458763, 9, 65537, 458764, 9, 131072, 458765, 9, 65538, 524290, 9, 65537, 524291, 9, 131072, 524292, 9, 65538, 524299, 9, 65537, 524300, 9, 131072, 524301, 9, 65538, 524302, 10, 65536, 589825, 10, 0, 589826, 9, 65537, 589827, 9, 131072, 589828, 9, 65538, 589832, 10, 0, 589835, 9, 65537, 589836, 9, 131072, 589837, 9, 65538, 655362, 9, 0, 655363, 9, 196609, 655364, 9, 1, 655365, 11, 0, 655371, 9, 0, 655372, 9, 131073, 655373, 9, 1, 720910, 10, 0, 786440, 11, 0, 851974, 4, 0, 851979, 4, 0, 851980, 16, 1, 851981, 16, 2, 851982, 16, 3, 917513, 11, 0, 917515, 17, 0, 983045, 9, 65536, 983046, 9, 131074, 983047, 9, 131074, 983048, 9, 131074, 983049, 9, 131074, 983050, 9, 2, 983051, 17, 65536, 983052, 17, 65537, 983053, 17, 65538, 983054, 17, 65539, 1048581, 9, 65537, 1048582, 9, 131072, 1048583, 9, 196608, 1048584, 9, 131072, 1048585, 9, 131072, 1048586, 9, 65538, 1048587, 17, 131073, 1048588, 17, 131072, 1048589, 17, 131074, 1048590, 17, 131075, 1114115, 11, 3, 1114117, 9, 65537, 1114118, 9, 131072, 1114119, 9, 131072, 1114120, 9, 196608, 1114121, 9, 131072, 1114122, 9, 65538, 1114124, 11, 3, 1114127, 14, 0, 1179653, 9, 65537, 1179654, 9, 196608, 1179655, 9, 131072, 1179656, 9, 131072, 1179657, 9, 131072, 1179658, 9, 65538, 1245189, 9, 0, 1245190, 9, 131073, 1245191, 9, 131073, 1245192, 9, 131073, 1245193, 9, 131073, 1245194, 9, 1, 1245195, 11, 3 )

[node name="Exits" type="Node" parent="."]

[node name="StorageRoom" parent="Exits" instance=ExtResource( 3 )]
position = Vector2( 1032.01, 1153.16 )
scale = Vector2( 3, 6 )
scene_to = 1

[node name="MainHallway" parent="Exits" instance=ExtResource( 3 )]
position = Vector2( 479.458, 1.49831 )
scale = Vector2( 3, 3 )
scene_to = 2

[node name="DemonRoom" parent="Exits" instance=ExtResource( 3 )]
position = Vector2( -9.73899, 286.177 )
scale = Vector2( 3, 3 )
scene_to = 3

[node name="SpawnPoints" type="Node" parent="."]

[node name="StorageRoom" type="Position2D" parent="SpawnPoints"]
position = Vector2( 963.861, 1155.8 )

[node name="MainHallway" type="Position2D" parent="SpawnPoints"]
position = Vector2( 478.656, 63.6226 )

[node name="DemonRoom" type="Position2D" parent="SpawnPoints"]
position = Vector2( 43.406, 288.298 )

[node name="CutsceneTriggers" type="Node" parent="."]

[node name="TheHead" parent="CutsceneTriggers" instance=ExtResource( 2 )]
position = Vector2( 487.232, 362.473 )
scale = Vector2( 18, 15 )
cutscene_animation_name = "the_head"

[node name="CutsceneWaypoints" type="Node" parent="."]

[node name="Position_1" type="Position2D" parent="CutsceneWaypoints"]
position = Vector2( 553.96, 1108.99 )

[node name="Position_2" type="Position2D" parent="CutsceneWaypoints"]
position = Vector2( 796, 1199 )

[node name="Position_3" type="Position2D" parent="CutsceneWaypoints"]
position = Vector2( 170, 1110 )

[node name="Position_4" type="Position2D" parent="CutsceneWaypoints"]
position = Vector2( 560, 755 )

[node name="TheHead" type="Position2D" parent="CutsceneWaypoints"]
position = Vector2( 481.444, 441.682 )

[node name="EntranceBlock" parent="." instance=ExtResource( 4 )]
position = Vector2( 706.537, -193.827 )

[node name="CutsceneManager" type="AnimationPlayer" parent="."]
anims/intro = SubResource( 1 )
anims/the_head = SubResource( 2 )
script = ExtResource( 8 )

[node name="Saoirse" parent="." instance=ExtResource( 7 )]
position = Vector2( 546, 1107 )

[node name="AnimatedSprite" parent="Saoirse" index="0"]
animation = "idle_walk_back"

[node name="CollisionShape2D" parent="Saoirse" index="1"]
visible = true

[node name="Light2D" parent="Saoirse" index="5"]
visible = true
enabled = false
energy = 0.0

[editable path="Saoirse"]

[editable path="Saoirse/StateMachine"]
